# aws-scripts

./: .gitignore  README.md  dynamodb_to_cf.py  pyproject.toml  template.yaml
